--- a/ruoyi-admin/src/main/resources/templates/client_landlord_feedback/client_landlord_feedback/add.html
+++ b/ruoyi-admin/src/main/resources/templates/client_landlord_feedback/client_landlord_feedback/add.html
@@ -8,10 +8,10 @@
     <div class="wrapper wrapper-content animated fadeInRight ibox-content">
         <form class="form-horizontal m" id="form-client_landlord_feedback-add">
             <div class="form-group">    
-                <label class="col-sm-3 control-label is-required">账号：</label>
-                <div class="col-sm-8">
-                    <input name="userNumber" class="form-control" type="text" required>
-                </div>
+<!--                <label class="col-sm-3 control-label is-required">账号：</label>-->
+<!--                <div class="col-sm-8">-->
+<!--                    <input name="userNumber" class="form-control" type="text" required>-->
+<!--                </div>-->
             </div>
             <div class="form-group">    
                 <label class="col-sm-3 control-label is-required">反馈内容：</label>
