--- a/ruoyi-admin/src/main/resources/templates/admin_feedback/admin_feedback/add.html
+++ b/ruoyi-admin/src/main/resources/templates/admin_feedback/admin_feedback/add.html
@@ -8,9 +8,9 @@
     <div class="wrapper wrapper-content animated fadeInRight ibox-content">
         <form class="form-horizontal m" id="form-admin_feedback-add">
             <div class="form-group">    
-                <label class="col-sm-3 control-label is-required">反馈ID：</label>
+                <label class="col-sm-3 control-label">反馈ID：</label>
                 <div class="col-sm-8">
-                    <input name="feedbackId" class="form-control" type="text" required>
+                    <input name="feedbackId" class="form-control" type="text">
                 </div>
             </div>
             <div class="form-group">    
