--- a/ruoyi-admin/src/main/resources/templates/admin_feedback/admin_feedback/admin_feedback.html
+++ b/ruoyi-admin/src/main/resources/templates/admin_feedback/admin_feedback/admin_feedback.html
@@ -11,10 +11,6 @@
                     <div class="select-list">
                         <ul>
                             <li>
-                                <label>反馈ID：</label>
-                                <input type="text" name="feedbackId"/>
-                            </li>
-                            <li>
                                 <label>回复内容：</label>
                                 <input type="text" name="adminAnswer"/>
                             </li>
@@ -38,7 +34,7 @@
 <!--                    <i class="fa fa-plus"></i> 添加-->
 <!--                </a>-->
                 <a class="btn btn-primary single disabled" onclick="$.operate.edit()" shiro:hasPermission="admin_feedback:admin_feedback:edit">
-                    <i class="fa fa-edit"></i> 修改回复
+                    <i class="fa fa-edit"></i> 反馈回复
                 </a>
                 <a class="btn btn-danger multiple disabled" onclick="$.operate.removeAll()" shiro:hasPermission="admin_feedback:admin_feedback:remove">
                     <i class="fa fa-remove"></i> 删除
@@ -49,17 +45,15 @@
                 <a class="btn btn-success" onclick="printHtml();" shiro:hasPermission="admin_feedback:admin_feedback:print">
                     <i class="glyphicon glyphicon-print icon-share"></i> 打印
                 </a>
-
+                <a class="btn btn-success" onclick="$.modal.openTab('平台反馈统计', '/admin_feedback/admin_feedback/statistics');" shiro:hasPermission="admin_feedback:admin_feedback:statistics">
+                    <i class="fa fa-plus"></i> 统计
+                </a>
             </div>
-<!--            <div class="col-sm-12 select-table table-striped">-->
-<!--                <table id="bootstrap-table"></table>-->
-<!--            </div>-->
             <div class="col-sm-12 select-table table‐bordered noprint" id="prints" style="width: 100%;">
                 <!--<table id="bootstrap-table" style="width: 100%;white-space: nowrap;  "></table>-->
                 <!--超长冒号显示会影响打印-->
                 <table id="bootstrap-table" style="width: 100%;word-break:break-all; word-wrap:break-all; "></table>
             </div>
-
         </div>
     </div>
     <th:block th:include="include :: footer" />
@@ -78,8 +72,6 @@
             //显示操作列
             $.table.showColumn('chaozuo');
         }
-
-
         $(function() {
             var options = {
                 url: prefix + "/list",
@@ -92,21 +84,33 @@
                     checkbox: true
                 },
                 {
-                    field: 'id',
+                    field: 'answerId',
                     title: '',
                     visible: false
-                },
-                {
-                    field: 'feedbackId',
-                    title: '反馈ID'
-                },
+                }, {
+                        field: 'userNumber',
+                        title: '用户名',
+                        sortable: true
+                    },
+                    {
+                        field: 'feedbackContent',
+                        title: '反馈内容',
+                        sortable: true
+                    },
+                    {
+                        field: 'feedbackTime',
+                        title: '反馈时间',
+                        sortable: true
+                    },
                 {
                     field: 'adminAnswer',
-                    title: '管理员回复'
+                    title: '回复内容',
+                    sortable: true
                 },
                 {
                     field: 'answerTime',
-                    title: '回复时间'
+                    title: '回复时间',
+                    sortable: true
                 },
                 {
                     title: '操作',
@@ -115,8 +119,8 @@
                     width: '150px',
                     formatter: function(value, row, index) {
                         var actions = [];
-                        actions.push('<a class="btn btn-success btn-xs ' + editFlag + '" href="javascript:void(0)" onclick="$.operate.edit(\'' + row.id + '\')"><i class="fa fa-edit"></i>编辑</a> ');
-                        actions.push('<a class="btn btn-danger btn-xs ' + removeFlag + '" href="javascript:void(0)" onclick="$.operate.remove(\'' + row.id + '\')"><i class="fa fa-remove"></i>删除</a>');
+                        actions.push('<a class="btn btn-success btn-xs ' + editFlag + '" href="javascript:void(0)" onclick="$.operate.edit(\'' + row.answerId + '\')"><i class="fa fa-edit"></i>编辑</a> ');
+                        actions.push('<a class="btn btn-danger btn-xs ' + removeFlag + '" href="javascript:void(0)" onclick="$.operate.remove(\'' + row.answerId + '\')"><i class="fa fa-remove"></i>删除</a>');
                         return actions.join('');
                     }
                 }]
