--- a/ruoyi-admin/src/main/resources/templates/clienthomeorder/homeorder/homeorder.html
+++ b/ruoyi-admin/src/main/resources/templates/clienthomeorder/homeorder/homeorder.html
@@ -36,13 +36,17 @@
 <!--                                <input th:value="${@permission.getPrincipalProperty('userName')}">-->
                                 <input type="hidden" name="${@permission.getPrincipalProperty('userName')}"/>
 
+<!--                            <li>-->
+<!--                                <label>订单ID：</label>-->
+<!--                                <input type="text" name="id"/>-->
+<!--                            </li>-->
                             <li>
-                                <label>订单ID：</label>
-                                <input type="text" name="id"/>
+                                <label>民宿名称：</label>
+                                <input type="text" name= "houseName"/>
                             </li>
                             <li>
-                                <label>房间ID：</label>
-                                <input type="text" name="roomId"/>
+                                <label>房间号：</label>
+                                <input type="text" name="roomNumber"/>
                             </li>
                             <li>
                                 <label>预计入住时间：</label>
@@ -124,6 +128,7 @@
         var editFlag = [[${@permission.hasPermi('clienthomeorder:homeorder:edit')}]];
         var removeFlag = [[${@permission.hasPermi('clienthomeorder:homeorder:remove')}]];
         var commentsFlag = [[${@permission.hasPermi('clienthomeorder:homeorder:comment')}]];
+        var querycommentsFlag = [[${@permission.hasPermi('landlordhomeorder:landlordorder:querycomment')}]];
         var isPaidDatas = [[${@dict.getType('sys_user_is_paid')}]];
         var isDoneDatas = [[${@dict.getType('sys_user_is_done')}]];
         var prefix = ctx + "clienthomeorder/homeorder";
@@ -136,6 +141,7 @@
                 removeUrl: prefix + "/remove",
                 // discussUrl:prefix + "/comment/{id}",
                 discussUrl:prefix + "/comment",
+                queryUrl:prefix+"/querycomment/{id}",
                 exportUrl: prefix + "/export",
                 modalName: "民宿订单",
                 columns: [{
@@ -144,7 +150,7 @@
                 {
                     field: 'id',
                     title: '订单ID',
-                    sortable: 'true'
+                    sortable: 'true',
                 },
                 {
                     field: 'clientNumber',
@@ -159,6 +165,22 @@
                 {
                     field: 'roomId',
                     title: '房间ID',
+                    sortable: 'true',
+                    visible: false
+                },
+                {
+                    field: 'houseName',
+                    title: '民宿名称',
+                    sortable: 'true'
+                },
+                {
+                    field: 'roomNumber',
+                    title: '房间号',
+                    sortable: 'true'
+                    },
+                {
+                    field: 'buyTime',
+                    title: '下单时间',
                     sortable: 'true'
                 },
                 {
@@ -208,7 +230,7 @@
                     formatter: function(value, row, index) {
                         var actions = [];
                          actions.push('<a class="btn btn-success btn-xs ' + commentsFlag + '" href="javascript:void(0)" onclick="$.operate.comment(\'' + row.id + '\')"><i class="fa fa-add"></i>评价</a> ');
-                         // actions.push('<a class="btn btn-danger btn-xs ' + editFlag + '" href="javascript:void(0)" onclick="$.operate.edit(\'' + row.id + '\')"><i class="fa fa-remove"></i>删除</a>');
+                         actions.push('<a class="btn btn-success btn-xs ' + querycommentsFlag + '" href="javascript:void(0)" onclick="$.operate.querycommentTab(\'' + row.id + '\')"><i class="fa fa-add"></i>查看评论</a>');
                         return actions.join('');
                     }
                 }]
