--- a/ruoyi-admin/src/main/resources/templates/clientspecialtyorder/clientorder/add.html
+++ b/ruoyi-admin/src/main/resources/templates/clientspecialtyorder/clientorder/add.html
@@ -19,6 +19,18 @@
                     <input name="specialtyId" class="form-control" type="text" required>
                 </div>
             </div>
+            <div class="form-group">
+                <label class="col-sm-3 control-label is-required">特产名：</label>
+                <div class="col-sm-8">
+                    <input name="specialtyName" class="form-control" type="text" required>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-3 control-label is-required">民宿：</label>
+                <div class="col-sm-8">
+                    <input name="HouseName" class="form-control" type="text" required>
+                </div>
+            </div>
             <div class="form-group">    
                 <label class="col-sm-3 control-label is-required">订货量：</label>
                 <div class="col-sm-8">
