--- a/ruoyi-admin/src/main/resources/templates/landlordhomeorder/landlordorder/add.html
+++ b/ruoyi-admin/src/main/resources/templates/landlordhomeorder/landlordorder/add.html
@@ -7,16 +7,37 @@
 <body class="white-bg">
     <div class="wrapper wrapper-content animated fadeInRight ibox-content">
         <form class="form-horizontal m" id="form-landlordorder-add">
-            <div class="form-group">    
-                <label class="col-sm-3 control-label is-required">顾客账号：</label>
+            <div class="form-group">
+            <label class="col-sm-3 control-label is-required">顾客账号：</label>
+            <div class="col-sm-8">
+                <input name="clientNumber" class="form-control" type="text" required>
+            </div>
+        </div>
+            <div class="form-group">
+                <label class="col-sm-3 control-label is-required">民宿名称：</label>
                 <div class="col-sm-8">
-                    <input name="clientNumber" class="form-control" type="text" required>
+                    <input name="houseName" class="form-control" type="text" required>
                 </div>
             </div>
-            <div class="form-group">    
-                <label class="col-sm-3 control-label is-required">房间ID：</label>
+            <div class="form-group">
+                <label class="col-sm-3 control-label is-required">房间号：</label>
                 <div class="col-sm-8">
-                    <input name="roomId" class="form-control" type="text" required>
+                    <input name="roomNumber" class="form-control" type="text" required>
+                </div>
+            </div>
+<!--            <div class="form-group">-->
+<!--                <label class="col-sm-3 control-label is-required">房间ID：</label>-->
+<!--                <div class="col-sm-8">-->
+<!--                    <input name="roomId" class="form-control" type="text" required>-->
+<!--                </div>-->
+<!--            </div>-->
+            <div class="form-group">
+                <label class="col-sm-3 control-label">下单时间：</label>
+                <div class="col-sm-8">
+                    <div class="input-group date">
+                        <input name="buyTime" class="form-control" placeholder="yyyy-MM-dd" type="text">
+                        <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
+                    </div>
                 </div>
             </div>
             <div class="form-group">    
