--- a/ruoyi-admin/src/main/resources/templates/landlordhomeorder/landlordorder/edit.html
+++ b/ruoyi-admin/src/main/resources/templates/landlordhomeorder/landlordorder/edit.html
@@ -8,16 +8,38 @@
     <div class="wrapper wrapper-content animated fadeInRight ibox-content">
         <form class="form-horizontal m" id="form-landlordorder-edit" th:object="${landlordRoomRecord}">
             <input name="id" th:field="*{id}" type="hidden">
-<!--            <div class="form-group">    -->
-<!--                <label class="col-sm-3 control-label is-required">顾客账号：</label>-->
+            <input type="hidden" name="${@permission.getPrincipalProperty('userName')}" />
+            <div class="form-group">
+                <label class="col-sm-3 control-label is-required">用户名：</label>
+                <div class="col-sm-8">
+                    <input name="clientName" th:field="*{clientName}" class="form-control" type="text" required disabled>
+                </div>
+            </div>
+            <div class="form-group">    
+                <label class="col-sm-3 control-label is-required">民宿名称：</label>
+                <div class="col-sm-8">
+                    <input name="houseName" th:field="*{houseName}" class="form-control" type="text"required disabled>
+                </div>
+            </div>
+<!--            <div class="form-group">-->
+<!--                <label class="col-sm-3 control-label is-required">房间ID：</label>-->
 <!--                <div class="col-sm-8">-->
-<!--                    <input name="clientNumber" th:field="*{clientNumber}" class="form-control" type="hidden" >-->
+<!--                    <input name="roomId" th:field="*{roomId}" class="form-control" type="text" >-->
 <!--                </div>-->
 <!--            </div>-->
-            <div class="form-group">    
-                <label class="col-sm-3 control-label is-required">房间ID：</label>
+            <div class="form-group">
+                <label class="col-sm-3 control-label">房间号：</label>
                 <div class="col-sm-8">
-                    <input name="roomId" th:field="*{roomId}" class="form-control" type="text" required>
+                    <input name="roomNumber" th:field="*{roomNumber}" class="form-control" type="text" required>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-3 control-label">下单时间：</label>
+                <div class="col-sm-8">
+                    <div class="input-group date">
+                        <input name="buyTime" th:value="${#dates.format(landlordRoomRecord.buyTime, 'yyyy-MM-dd')}" class="form-control" placeholder="yyyy-MM-dd" type="text">
+                        <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
+                    </div>
                 </div>
             </div>
             <div class="form-group">    
