--- a/ruoyi-admin/src/main/resources/templates/landlordhomeorder/landlordorder/landlordorder.html
+++ b/ruoyi-admin/src/main/resources/templates/landlordhomeorder/landlordorder/landlordorder.html
@@ -30,16 +30,25 @@
             <div class="col-sm-12 search-collapse">
                 <form id="formId">
                     <div class="select-list">
-                        <ul>
+
 <!--                                <label>房东：</label>-->
                                 <input type="hidden" name="${@permission.getPrincipalProperty('userName')}" />
                             <li>
-                                <label>顾客账号：</label>
-                                <input type="text" name="clientNumber"/>
+                                <label>顾客名：</label>
+                                <input type="text" name="clientName"/>
                             </li>
+<!--                            <li>-->
+<!--                                <label>房间ID：</label>-->
+<!--                                <input type="text" name="roomId"/>-->
+<!--                        </li>-->
                             <li>
-                                <label>房间ID：</label>
-                                <input type="text" name="roomId"/>
+                                <label>民宿名称：</label>
+                                <input type="text" name= "houseName"/>
+                            </li>
+
+                            <li>
+                                <label>房间号：</label>
+                                <input type="text" name="roomNumber"/>
                             </li>
                             <li>
                                 <label>预计入住时间：</label>
@@ -144,16 +153,33 @@
                 {
                         field: 'clientNumber',
                         title: '用户账号',
-                        sortable: 'true'
+                        sortable: 'true',
+                        visible: false
                 },
                 {
-                        field: 'loginName',
+                        field: 'clientName',
                         title: '用户名',
                         sortable: 'true'
                  },
                 {
                     field: 'roomId',
                     title: '房间ID',
+                    sortable: 'true',
+                    visible: false
+                },
+                {
+                    field: 'houseName',
+                    title: '民宿名称',
+                    sortable: 'true'
+                },
+                {
+                    field: 'roomNumber',
+                    title: '房间号',
+                    sortable: 'true'
+                },
+                {
+                    field: 'buyTime',
+                    title: '下单时间',
                     sortable: 'true'
                 },
                 {
