--- a/ruoyi-admin/src/main/resources/templates/landlordspecialtyorder/specialtyorder/add.html
+++ b/ruoyi-admin/src/main/resources/templates/landlordspecialtyorder/specialtyorder/add.html
@@ -13,10 +13,16 @@
                     <input name="clientNumber" class="form-control" type="text" required>
                 </div>
             </div>
-            <div class="form-group">    
-                <label class="col-sm-3 control-label is-required">特产ID：</label>
+            <div class="form-group">
+                <label class="col-sm-3 control-label is-required">民宿名称：</label>
                 <div class="col-sm-8">
-                    <input name="specialtyId" class="form-control" type="text" required>
+                    <input name="houseName" class="form-control" type="text" required>
+                </div>
+            </div>
+            <div class="form-group">    
+                <label class="col-sm-3 control-label is-required">特产名：</label>
+                <div class="col-sm-8">
+                    <input name="specialtyName" class="form-control" type="text" required>
                 </div>
             </div>
             <div class="form-group">    
