--- a/ruoyi-admin/src/main/resources/templates/landlordspecialtyorder/specialtyorder/edit.html
+++ b/ruoyi-admin/src/main/resources/templates/landlordspecialtyorder/specialtyorder/edit.html
@@ -8,18 +8,36 @@
     <div class="wrapper wrapper-content animated fadeInRight ibox-content">
         <form class="form-horizontal m" id="form-specialtyorder-edit" th:object="${landlordSpecialtyRecord}">
             <input name="id" th:field="*{id}" type="hidden">
-            <div class="form-group">    
-                <label class="col-sm-3 control-label is-required">顾客ID：</label>
+<!--            <div class="form-group">    -->
+<!--                <label class="col-sm-3 control-label is-required">顾客ID：</label>-->
+<!--                <div class="col-sm-8">-->
+<!--                    <input name="clientNumber" th:field="*{clientNumber}" class="form-control" type="text" required>-->
+<!--                </div>-->
+<!--            </div>-->
+            <div class="form-group">
+                <label class="col-sm-3 control-label is-required">用户名：</label>
                 <div class="col-sm-8">
-                    <input name="clientNumber" th:field="*{clientNumber}" class="form-control" type="text" required>
+                    <input name="clientName" th:field="*{clientName}" class="form-control" type="text" required disabled>
                 </div>
             </div>
-            <div class="form-group">    
-                <label class="col-sm-3 control-label is-required">特产ID：</label>
+            <div class="form-group">
+                <label class="col-sm-3 control-label is-required">民宿名称：</label>
                 <div class="col-sm-8">
-                    <input name="specialtyId" th:field="*{specialtyId}" class="form-control" type="text" required>
+                    <input name="houseName" th:field="*{houseName}" class="form-control" type="text" required >
                 </div>
             </div>
+            <div class="form-group">
+                <label class="col-sm-3 control-label is-required">特产名：</label>
+                <div class="col-sm-8">
+                    <input name="specialtyName" th:field="*{specialtyName}" class="form-control" type="text" required>
+                </div>
+            </div>
+<!--            <div class="form-group">    -->
+<!--                <label class="col-sm-3 control-label is-required">特产ID：</label>-->
+<!--                <div class="col-sm-8">-->
+<!--                    <input name="specialtyId" th:field="*{specialtyId}" class="form-control" type="text" required>-->
+<!--                </div>-->
+<!--            </div>-->
             <div class="form-group">    
                 <label class="col-sm-3 control-label is-required">订货量：</label>
                 <div class="col-sm-8">
