--- a/wx/pages/history/room/room_history.wxml
+++ b/wx/pages/history/room/room_history.wxml
@@ -1,2 +1,39 @@
 <!--pages/history/room/room_history.wxml-->
-<text>pages/history/room/room_history.wxml</text>
+<view class='main'>
+  <view class='restMoney'>
+    <view class='yue'>
+      <view class='describe'>我的民宿订单</view>
+      <view class='explain'>查看您的历史订单与评价</view>
+      <button class='sbutton' bindtap='toStatistics'>
+        查看订单统计报告
+      </button>
+    </view>
+  </view>
+  <!-- <view class='qiehuan' style="width:100%;height:{{height}};background:red"> -->
+  <view class='tab-items'>
+    <view class='recharge' wx:for="{{servicelist}}" wx:key="{{item.id}}" wx:for-item="item">
+      <view class='record'>
+        <view class='list'>
+          <view class='housename'>{{item.houseName}}</view>
+          <view class='word'>房间号：{{item.roomNumber}}</view>
+          <view class='word'>房间价格：{{item.price}}元</view>
+          <view class='address'>下单时间：{{item.buyTime}}</view>
+          <view class='address'>预计入住时间：{{item.reserveInDate}}</view>
+          <view class='address'>预计退房时间：{{item.reserveOutDate}}</view>
+          <view class='address'>实际入住时间：{{item.checkInDate}}</view>
+          <view class='address'>实际退房时间：{{item.checkOutDate}}</view>
+        </view>
+        <view class='list'>
+          <view class='word'>支付状态：{{item.isPaid}}</view>
+          <view class='word'>订单状态：{{item.isDone}}</view>
+        </view>
+      </view>
+    </view>
+  </view>
+  <!-- 热线 -->
+  <view class='rexian'>
+    <view class='tels'>服务热线：4008-888-999</view>
+  </view>
+  <!-- </view> -->
+</view>
+
