--- a/ruoyi-admin/src/main/resources/templates/system/buySpecialty/buySpecialty.html
+++ b/ruoyi-admin/src/main/resources/templates/system/buySpecialty/buySpecialty.html
@@ -21,7 +21,7 @@
             margin: 0mm;
         }
     </style>
-    <th:block th:include="include :: header('房子管理列表')" />
+    <th:block th:include="include :: header('特产订购列表')" />
 </head>
 <body class="gray-bg">
 <div class="container-div">
@@ -35,20 +35,20 @@
                             <input type="text" name="houseId"/>
                         </li>
                         <li>
-                            <label>房间号：</label>
-                            <input type="text" name="roomNumber"/>
+                            <label>特产名称：</label>
+                            <input type="text" name="specialtyName"/>
                         </li>
                         <li>
-                            <label>每日价格：</label>
-                            <input type="text" name="pricePerDay"/>
+                            <label>特产描述：</label>
+                            <input type="text" name="description"/>
                         </li>
                         <li>
-                            <label>房间标准：</label>
-                            <input type="text" name="standard"/>
+                            <label>特产单价：</label>
+                            <input type="text" name="price"/>
                         </li>
                         <li>
-                            <label>空闲：</label>
-                            <input type="text" name="isFree"/>
+                            <label>库存量：</label>
+                            <input type="text" name="inventory"/>
                         </li>
                         <li>
                             <a class="btn btn-primary btn-rounded btn-sm noprint" onclick="$.table.search()"><i class="fa fa-search"></i>&nbsp;搜索</a>
@@ -60,19 +60,19 @@
         </div>
 
         <div class="btn-group-sm" id="toolbar" role="group">
-            <a class="btn btn-success" onclick="$.operate.add()" shiro:hasPermission="system:room:add">
-                <i class="fa fa-plus"></i> 上传房源
-            </a>
-            <a class="btn btn-primary single disabled" onclick="$.operate.edit()" shiro:hasPermission="system:room:edit">
-                <i class="fa fa-edit"></i> 修改
-            </a>
-            <a class="btn btn-danger multiple disabled" onclick="$.operate.removeAll()" shiro:hasPermission="system:room:remove">
-                <i class="fa fa-remove"></i> 删除
-            </a>
-            <a class="btn btn-warning" onclick="$.table.exportExcel()" shiro:hasPermission="system:room:export">
+            <!--                <a class="btn btn-success" onclick="$.operate.add()" shiro:hasPermission="system:buySpecialty:add">-->
+            <!--                    <i class="fa fa-plus"></i> 添加-->
+            <!--                </a>-->
+            <!--                <a class="btn btn-primary single disabled" onclick="$.operate.edit()" shiro:hasPermission="system:buySpecialty:edit">-->
+            <!--                    <i class="fa fa-edit"></i> 修改-->
+            <!--                </a>-->
+            <!--                <a class="btn btn-danger multiple disabled" onclick="$.operate.removeAll()" shiro:hasPermission="system:buySpecialty:remove">-->
+            <!--                    <i class="fa fa-remove"></i> 删除-->
+            <!--                </a>-->
+            <a class="btn btn-warning" onclick="$.table.exportExcel()" shiro:hasPermission="system:buySpecialty:export">
                 <i class="fa fa-download"></i> 导出
             </a>
-            <a class="btn btn-success" onclick="$.modal.openTab('房源统计', '/system/room/statistics');" shiro:hasPermission="system:room:statistics">
+            <a class="btn btn-success" onclick="$.modal.openTab('特产销售统计', '/system/buySpecialty/statistics');" shiro:hasPermission="system:buySpecialty:statistics">
                 <i class="fa fa-plus"></i> 统计
             </a>
             <a class="btn btn-success" onclick="printHtml();" shiro:hasPermission="xxxx:xxxx:print">
@@ -91,9 +91,10 @@
 </div>
 <th:block th:include="include :: footer" />
 <script th:inline="javascript">
-    var editFlag = [[${@permission.hasPermi('system:room:edit')}]];
-    var removeFlag = [[${@permission.hasPermi('system:room:remove')}]];
-    var prefix = ctx + "system/room";
+    var editFlag = [[${@permission.hasPermi('system:buySpecialty:edit')}]];
+    var removeFlag = [[${@permission.hasPermi('system:buySpecialty:remove')}]];
+    var buyFlag = [[${@permission.hasPermi('system:buySpecialty:buy')}]];
+    var prefix = ctx + "system/buySpecialty";
 
     $(function() {
         var options = {
@@ -102,7 +103,7 @@
             updateUrl: prefix + "/edit/{id}",
             removeUrl: prefix + "/remove",
             exportUrl: prefix + "/export",
-            modalName: "房子管理",
+            modalName: "特产订购",
             columns: [{
                 checkbox: true
             },
@@ -120,31 +121,33 @@
                 {
                     field: 'houseName',
                     title: '民宿名称',
+                },
+                {
+                    field: 'specialtyName',
+                    title: '特产名称',
                     sortable: 'true'
                 },
                 {
-                    field: 'roomNumber',
-                    title: '房间号',
+                    field: 'description',
+                    title: '特产描述'
+                },
+                {
+                    field: 'price',
+                    title: '特产单价',
                     sortable: 'true'
                 },
                 {
-                    field: 'pricePerDay',
-                    title: '每日价格',
+                    field: 'inventory',
+                    title: '库存量',
                     sortable: 'true'
                 },
                 {
-                    field: 'standard',
-                    title: '房间标准',
-                    sortable: 'true'
-                },
-                {
-                    field: 'isFree',
-                    title: '空闲',
-                    sortable: 'true',
-                    formatter:function (value) {
-                        if(value==1)value="是";
-                        else value="否";
-                        return value;
+                    field: 'imageUrl',
+                    title: '特产图片',
+                    formatter: function(value, row, index) {
+                        var actions = [];
+                        actions.push('<img src="'+value+'" alt="无法显示图片" height="60" width="90"/>');
+                        return actions.join('');
                     }
                 },
                 {
@@ -154,14 +157,22 @@
                     align: 'center',
                     formatter: function(value, row, index) {
                         var actions = [];
-                        actions.push('<a class="btn btn-success btn-xs ' + editFlag + '" href="javascript:void(0)" onclick="$.operate.edit(\'' + row.id + '\')"><i class="fa fa-edit"></i>修改信息</a> ');
-                        actions.push('<a class="btn btn-danger btn-xs ' + removeFlag + '" href="javascript:void(0)" onclick="$.operate.remove(\'' + row.id + '\')"><i class="fa fa-remove"></i>删除</a>');
+                        //actions.push('<a class="btn btn-success btn-xs ' + editFlag + '" href="javascript:void(0)" onclick="$.operate.edit(\'' + row.id + '\')"><i class="fa fa-edit"></i>编辑</a> ');
+                        //actions.push('<a class="btn btn-danger btn-xs ' + removeFlag + '" href="javascript:void(0)" onclick="$.operate.remove(\'' + row.id + '\')"><i class="fa fa-remove"></i>删除</a>');
+                        actions.push("<a class='btn btn-success btn-xs " + buyFlag + "' href='javascript:void(0)' onclick='buy(" + row.id + ")'><i class='fa fa-search'></i>详情页查看</a>");
                         return actions.join('');
                     }
                 }]
         };
         $.table.init(options);
     });
+
+    function buy(id) {
+        var url = prefix + '/buy/' + id;
+        $.modal.openTab("详情页", url);
+    }
+
+
 
     function printHtml() {
         $("#prints").removeClass("noprint");
