--- a/ruoyi-admin/src/main/resources/templates/system/room/add.html
+++ b/ruoyi-admin/src/main/resources/templates/system/room/add.html
@@ -4,52 +4,52 @@
     <th:block th:include="include :: header('新增房子管理')" />
 </head>
 <body class="white-bg">
-    <div class="wrapper wrapper-content animated fadeInRight ibox-content">
-        <form class="form-horizontal m" id="form-room-add">
-            <div class="form-group">    
-                <label class="col-sm-3 control-label is-required">民宿ID：</label>
-                <div class="col-sm-8">
-                    <input name="houseId" class="form-control" type="text" required>
-                </div>
+<div class="wrapper wrapper-content animated fadeInRight ibox-content">
+    <form class="form-horizontal m" id="form-room-add">
+        <div class="form-group">
+            <label class="col-sm-3 control-label is-required">民宿ID：</label>
+            <div class="col-sm-8">
+                <input name="houseId" class="form-control" type="text" required>
             </div>
-            <div class="form-group">    
-                <label class="col-sm-3 control-label is-required">房间号：</label>
-                <div class="col-sm-8">
-                    <input name="roomNumber" class="form-control" type="text" required>
-                </div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-3 control-label is-required">房间号：</label>
+            <div class="col-sm-8">
+                <input name="roomNumber" class="form-control" type="text" required>
             </div>
-            <div class="form-group">    
-                <label class="col-sm-3 control-label is-required">每日价格：</label>
-                <div class="col-sm-8">
-                    <input name="pricePerDay" class="form-control" type="text" required>
-                </div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-3 control-label is-required">每日价格：</label>
+            <div class="col-sm-8">
+                <input name="pricePerDay" class="form-control" type="text" required>
             </div>
-            <div class="form-group">    
-                <label class="col-sm-3 control-label is-required">房间标准：</label>
-                <div class="col-sm-8">
-                    <input name="standard" class="form-control" type="text" required>
-                </div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-3 control-label is-required">房间标准：</label>
+            <div class="col-sm-8">
+                <input name="standard" class="form-control" type="text" required>
             </div>
-            <div class="form-group">    
-                <label class="col-sm-3 control-label is-required">空闲：</label>
-                <div class="col-sm-8">
-                    <input name="isFree" class="form-control" type="text" required>
-                </div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-3 control-label is-required">空闲（是：1，否：0）：</label>
+            <div class="col-sm-8">
+                <input name="isFree" class="form-control" type="number" required oninput="if(value!=0)value=1">
             </div>
-        </form>
-    </div>
-    <th:block th:include="include :: footer" />
-    <script th:inline="javascript">
-        var prefix = ctx + "system/room"
-        $("#form-room-add").validate({
-            focusCleanup: true
-        });
+        </div>
+    </form>
+</div>
+<th:block th:include="include :: footer" />
+<script th:inline="javascript">
+    var prefix = ctx + "system/room"
+    $("#form-room-add").validate({
+        focusCleanup: true
+    });
 
-        function submitHandler() {
-            if ($.validate.form()) {
-                $.operate.save(prefix + "/add", $('#form-room-add').serialize());
-            }
+    function submitHandler() {
+        if ($.validate.form()) {
+            $.operate.save(prefix + "/add", $('#form-room-add').serialize());
         }
-    </script>
+    }
+</script>
 </body>
 </html>
